--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     restart: unless-stopped
     command: /app/run_server.sh
     environment:
-      VIRTUAL_HOST: templatestreamlit.gnps2.org
+      VIRTUAL_HOST: streamlittemplate.wanglab.science
       VIRTUAL_PORT: 5000
-      LETSENCRYPT_HOST: templatestreamlit.gnps2.org
+      LETSENCRYPT_HOST: streamlittemplate.wanglab.science
       LETSENCRYPT_EMAIL: mwang87@gmail.com
 
 networks:
