--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,15 @@ services:
       - nginx-net
     restart: unless-stopped
     command: /app/run_server.sh
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"      # Maximum size of a single log file
+        max-file: "3"        # Maximum number of log files to keep (rotates after 3 files)
+    deploy:
+      resources:
+        limits:
+          memory: 8000M
     environment:
       VIRTUAL_HOST: streamlittemplate.wanglab.science
       VIRTUAL_PORT: 5000
